Update visual bug in launch item spacing

--- a/src/assets/styles/launch-item.scss
+++ b/src/assets/styles/launch-item.scss
@@ -20,7 +20,7 @@
   &__flight-number {
     font-size: xx-large;
     padding: 1rem 2rem;
-    min-width: 80px;
+    min-width: 120px;
   }
 
   &__mission-name {
